<resources>
    <string name="app_name">New Leaf Children Bookstore InventoryApp2</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Entries</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a book!</string>
    <string name="editor_activity_title_new_book">Add a book</string>
    <string name="editor_activity_title_edit_book">Edit a Book</string>
    <string name="category_overview">Category</string>
    <string name="hint_book_name">Enter book name</string>
    <string name="hint_book_price">Book price</string>
    <string name="hint_book_quantity">Book quantity</string>
    <string name="hint_supplier_name">Enter Supplier name</string>
    <string name="hint_supplier_phone_number">Supplier phone number</string>
    <string name="editor_insert_book_successful">Book Added Sucessfully! </string>
    <string name="editor_insert_book_failed">Error with deleting a book</string>
    <string name="editor_update_book_failed">The update has failed</string>
    <string name="editor_update_book_successful">The update was successful</string>
    <string name="unsaved_changes_dialog_msg">unsaved changes</string>
    <string name="discard">discard</string>
    <string name="keep_editing">keep editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_book_failed">Error with deleting a book</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="unknown_phone_number">Unknown Supplier Phone Number</string>
    <string name="button_sale_one_product_sold">Congrats! Your book Is Sold!</string>
    <string name="button_sale_sold_out">Book is sold out</string>
    <string name="list_item_book_price">Price: </string>
    <string name="list_item_quantity">Quantity:</string>
    <string name="list_item_title_supplier_name">Supplier Name: </string>
    <string name="list_item_supplier_phone_number">Supplier Phone Number:</string>
    <string name="list_item_button_sale">SALE</string>
    <string name="editor_activity_error_while_empty_editor">Please fill in all the fields</string>
    <string name="activity_editor_name">Name:</string>
    <string name="activity_editor_price">Price:</string>
    <string name="activity_editor_quantity">Quantity:</string>
    <string name="activity_editor_buttonn_decrease">-</string>
    <string name="activity_editor_button_increase">+</string>
    <string name="activity_editor_supplier_name">Supplier Name:</string>
    <string name="activity_editor_supplier_phone_number">Supplier Phone Number:</string>
    <string name="activity_editor_action_button">CALL SUPPLIER</string>
    <string name="editor_activity_button_quantity_increase">Only maximum of 15 books </string>
    <string name="editor_activity_quantity_empty_stock">Book title out of stock</string>
    <string name="invalid_or_empty_number">Incorrect phone number</string>
    <string name="price_not_entered">Price not entered correctly</string>
    <string name="quantity_not_entered">quantity not entered correctly</string>
    <string name="supplier_name_not_entered">Supplier name not entered correctly</string>
    <string name="supplier_phone_number_not_entered">Supplier phone number not entered correctly</string>
    <string name="hint_value_to_add">Ex: 299 (for 2.99) </string>
</resources>
