<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Input fields -->
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingLeft="4dp"
        android:orientation="vertical">

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_product_name"
            android:hint="@string/hint_book_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />

        <!-- Book price field -->
        <EditText
            android:id="@+id/edit_book_price"
            android:hint="@string/hint_book_price"
            android:inputType="number|none"
            style="@style/EditorFieldStyle" />

        <!-- Book quantity field -->
        <EditText
            android:id="@+id/edit_book_quantity"
            android:hint="@string/hint_book_quantity"
            android:inputType="number"
            style="@style/EditorFieldStyle" />

        <!-- Supplier name field -->
        <EditText
            android:id="@+id/edit_supplier_name"
            android:hint="@string/hint_supplier_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />

        <!-- Supplier phone number field -->
        <EditText
            android:id="@+id/edit_supplier_phone_number"
            android:hint="@string/hint_supplier_phone_number"
            android:inputType="phone|number"
            style="@style/EditorFieldStyle"/>
    </LinearLayout>
</LinearLayout>